--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.metals/
+.vscode/
+config.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
